--- a/NewPortfolio.html
+++ b/NewPortfolio.html
@@ -13,7 +13,7 @@
     <p>Web Developer | Designer | Creator</p> -->
 
     <div id="container">
-        <img src="Porto Image.jpg" alt="Candidate" class="profile-img">
+        <img src="Po.jpg" alt="Candidate" class="profile-img">
         <h1>Niteesh Kumar Patel</h1>
         <p>Web Developer | Designer | Problem Solver</p>
       </div>
